src/objects/Income_New__c.object
<CustomObject>
    <fields>
        <fullName>Income_Source__c</fullName>
        <label>Source Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Value__c</fullName>
        <label>Income Value</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Income_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Income Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedClient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RelatedClient</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>Income_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>Income_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_Types__c</fullName>
        <label>Income Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory Unit Income</fullName>
                </value>
                <value>
                    <fullName>Alimony/Child Support Income</fullName>
                </value>
                <value>
                    <fullName>Automobile Expense Amount</fullName>
                </value>
                <value>
                    <fullName>Boarder Income</fullName>
                </value>
                <value>
                    <fullName>Capital Gains</fullName>
                </value>
                <value>
                    <fullName>Disability Income</fullName>
                </value>
                <value>
                    <fullName>Employment Related Assets</fullName>
                </value>
                <value>
                    <fullName>Foreign Income</fullName>
                </value>
                <value>
                    <fullName>Foster Care</fullName>
                </value>
                <value>
                    <fullName>Housing Choice Voucher (Sec 8)</fullName>
                </value>
                <value>
                    <fullName>Military Base Pay</fullName>
                </value>
                <value>
                    <fullName>Military Clothes Allowance</fullName>
                </value>
                <value>
                    <fullName>Military Combat Pay</fullName>
                </value>
                <value>
                    <fullName>Military Flight Pay</fullName>
                </value>
                <value>
                    <fullName>Military Hazard Pay</fullName>
                </value>
                <value>
                    <fullName>Military Overseas Pay</fullName>
                </value>
                <value>
                    <fullName>Military Prop Pay</fullName>
                </value>
                <value>
                    <fullName>Military Quarters Allowance</fullName>
                </value>
                <value>
                    <fullName>Military Rations Allowance</fullName>
                </value>
                <value>
                    <fullName>Military Variable Housing Allowance</fullName>
                </value>
                <value>
                    <fullName>Mortgage Credit Certificate</fullName>
                </value>
                <value>
                    <fullName>Mortgage Differential</fullName>
                </value>
                <value>
                    <fullName>Non-Borrower Household Income</fullName>
                </value>
                <value>
                    <fullName>Notes Receivable/Installment</fullName>
                </value>
                <value>
                    <fullName>Other Type Of Income</fullName>
                </value>
                <value>
                    <fullName>Royalty Payment</fullName>
                </value>
                <value>
                    <fullName>Seasonal Income</fullName>
                </value>
                <value>
                    <fullName>Subject Property Net Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Temporary Leave Income</fullName>
                </value>
                <value>
                    <fullName>Tip Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Income</label><nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Income ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Incomes</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Loan__c</columns>
        <columns>RelatedClient__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <sharingReasons>
        <fullName>LoanProcessor__c</fullName>
        <label>Loan Processor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Loan_Officer__c</fullName>
        <label>Loan Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Origination_Loan_Officer__c</fullName>
        <label>Origination Loan Officer</label>
    </sharingReasons>
</CustomObject>